--- a/index.html
+++ b/index.html
@@ -8,13 +8,30 @@
     <script src="client.js" charset="utf-8"></script>
   </head>
   <body>
-    <h1>Employee Salary Calculator</h1>
-    <ul class="employee-form">
-      <li><input placeholder="First Name" type="text" /></li>
-      <li><input placeholder="Last Name" type="text" /></li>
-      <li><input placeholder="Employee ID" type="text" /></li>
-      <li><input placeholder="Job Title" type="text" /></li>
-      <li><input placeholder="Annual Salary" type="number" /></li>
-    </ul>
+    <header>
+      <h1>Employee Salary Calculator</h1>
+    </header>
+    <main>
+      <ul class="employee-form">
+        <li><input placeholder="First Name" type="text" /></li>
+        <li><input placeholder="Last Name" type="text" /></li>
+        <li><input placeholder="Employee ID" type="text" /></li>
+        <li><input placeholder="Job Title" type="text" /></li>
+        <li><input placeholder="Annual Salary" type="number" /></li>
+      </ul>
+      <table class="employee-table">
+        <thead>
+          <tr>
+            <th>Employee</th>
+            <th>Employee ID</th>
+            <th>Job Title</th>
+            <th>Annual Salary</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr><td>test</td><td>test</td><td>test</td><td>test</td></tr>
+        </tbody>
+      </table>
+    </main>
   </body>
 </html>
