Hard Mode - JS portion complete

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <th>Employee ID</th>
             <th>Job Title</th>
             <th>Annual Salary</th>
+            <th>Manage Employee</th>
           </tr>
         </thead>
         <tbody class="employee-table-body">
