Minor changes and code cleanup

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <th>Employee ID</th>
             <th>Job Title</th>
             <th>Annual Salary</th>
-            <th>Manage Employee</th>
+            <th>Delete Employee</th>
           </tr>
         </thead>
         <tbody class="employee-table-body">
@@ -50,9 +50,9 @@
         </thead>
         <tbody>
           <tr>
-            <td class="monthly-total"></td>
-            <td class="annual-total"></td>
-            <td class="average-total"></td>
+            <td class="monthly-total">0</td>
+            <td class="annual-total">0</td>
+            <td class="average-total">0</td>
           </tr>
         </tbody>
       </table>
