Fix background cover overlay

--- a/index.html
+++ b/index.html
@@ -25,18 +25,19 @@
       <div class="table-container">
         <h2>Employee Table</h2>
         <table class="employee-table">
-        <thead class="employee-table-head">
-          <tr>
-            <th>Employee</th>
-            <th>Employee ID</th>
-            <th>Job Title</th>
-            <th>Annual Salary</th>
-            <th>Delete Employee</th>
-          </tr>
-        </thead>
-        <tbody class="employee-table-body">
-        </tbody>
-      </table>
+          <thead class="employee-table-head">
+            <tr>
+              <th>Employee</th>
+              <th>Employee ID</th>
+              <th>Job Title</th>
+              <th>Annual Salary</th>
+              <th>Delete Employee</th>
+            </tr>
+          </thead>
+          <tbody class="employee-table-body">
+            <!-- Intentionally left blank. Populated with jQuery. -->
+          </tbody>
+        </table>
       </div>
       <div class="table-container">
         <h2>Totals</h2>
